--- a/css/band/style.css
+++ b/css/band/style.css
@@ -66,23 +66,63 @@ div.dates div span {
 /* ::::::::   nav    :::::::: */
 /* :::::::: ::::::::  :::::::: */
 /* :::::::: ::::::::  :::::::: */
-.op {
-  opacity: 0.5;
-}
+
 nav {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
   z-index: 1;
-  background-color: transparent;
+  background-color: black;
 }
 
-nav a {
+nav div {
+
+}
+
+nav div ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav div ul li {
+
+}
+
+nav div ul li a {
   text-decoration: none;
   color: white;
-  padding: 15px;
-  margin: 0 10px 0 10px;
+  padding: 10px;
 }
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  position: absolute;
+  z-index: 2;
+  display: none;
+}
+
+.dropdown-content li a {
+  display: inline-block; 
+}
+
+nav div ul li a:hover {
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+
+.dropdown a:hover ~ .dropdown-content{
+  display: block;
+}
+
+.dropdown-content:hover {
+  display: block;
+  /* background-color: white; */
+}
+
 /* :::::::: ::::::::  :::::::: */
 /* :::::::: ::::::::  :::::::: */
 /* ::::::::   footer    :::::::: */
