--- a/css/food/style-footer.css
+++ b/css/food/style-footer.css
@@ -7,6 +7,13 @@ footer div div {
     padding: 10px;
 }
 
+footer > div {
+    border-top: 1px solid black;
+    padding: 10px;
+}
+
+
+
 .footer *{
     margin-bottom: 10px;
 }
