--- a/css/food/style.css
+++ b/css/food/style.css
@@ -1,6 +1,7 @@
 * {
-    background-color: rgb(0, 0, 0, 0.1);
+    /* background-color: rgb(0, 0, 0, 0.1); */
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: "Montserrat", sans-serif;
 }
