--- a/css/fashion-blog/style.css
+++ b/css/fashion-blog/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     font-family: "Montserrat", sans-serif;
-    background-color: rgb(0, 0, 0, 0.1);
+    /* background-color: rgb(0, 0, 0, 0.1); */
 }
 
 .padding {
