--- a/css/architects/style.css
+++ b/css/architects/style.css
@@ -14,6 +14,7 @@ body {
 
 #container-img {
   position: relative;
+  overflow: hidden;
 }
 
 #container-text {
@@ -21,4 +22,16 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+
+#container-img img{
+  position: fixed;
+    z-index: -1;
+    top: 0;
+}
+
+
+section {
+
 }
