--- a/css/catering/styel.css
+++ b/css/catering/styel.css
@@ -9,7 +9,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(0, 0, 0, 0.1);
+    /* background-color: rgb(0, 0, 0, 0.1); */
 }
 
 html {  
@@ -17,7 +17,8 @@ html {
 }
 
 footer{
-    padding: 20px 60px;
+    padding: 50px 60px;
+    text-align: center;
 }
 
 footer {
@@ -27,4 +28,6 @@ footer {
 
 footer p a {
     text-decoration: none;
+    color: white;
 }
+
