--- a/css/bocho-oro/style-nav.css
+++ b/css/bocho-oro/style-nav.css
@@ -27,19 +27,34 @@ nav {
 }
 
 .profile-menu{
-  height: 100px;
-  background-color: blue;
+  background-color: white;
   position: absolute;
   top: 105% ;
   width: 100px;
   left: -50px;
   border-radius: 20px;
-  padding: 10px;
+ overflow: hidden;
   display: none;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25), -4px -4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .profile:hover .profile-menu{
   display: block;
+}
+
+.card-prfile a{
+  text-decoration: none;
+  color: black;
+  padding: 10px 20px;
+  display: block;
+}
+
+.card-prfile:hover {
+  background-color: #3ab395;
+}
+
+.card-prfile:hover a {
+  color: white;
 }
 
 .card-title {
