--- a/css/bocho-oro/style-nav.css
+++ b/css/bocho-oro/style-nav.css
@@ -26,23 +26,23 @@ nav {
   position: relative;
 }
 
-.profile-menu{
+.profile-menu {
   background-color: white;
   position: absolute;
-  top: 105% ;
+  top: 105%;
   width: 100px;
   left: -50px;
   border-radius: 20px;
- overflow: hidden;
+  overflow: hidden;
   display: none;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25), -4px -4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.profile:hover .profile-menu{
+.profile:hover .profile-menu {
   display: block;
 }
 
-.card-prfile a{
+.card-prfile a {
   text-decoration: none;
   color: black;
   padding: 10px 20px;
@@ -67,7 +67,6 @@ nav {
   border-radius: 10px;
   cursor: pointer;
   margin-bottom: 10px;
- 
 }
 
 @keyframes animatin {
@@ -75,7 +74,7 @@ nav {
     opacity: 0;
     scale: 0;
   }
-  100%{
+  100% {
     opacity: 1;
     scale: 1;
   }
@@ -88,10 +87,9 @@ nav {
   animation: animatin;
   animation-duration: 0.5s;
 }
-.card-title div.card-body div{
+.card-title div.card-body div {
   display: flex;
   flex-direction: column;
-  
 }
 
 .card-body a {
@@ -110,8 +108,6 @@ nav {
   gap: 10px;
   overflow-x: auto;
 }
-
-
 
 .main-title {
   font-size: 200%;
@@ -158,12 +154,12 @@ nav {
 }
 
 .main-table table tr:hover {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 input[type="button"]:active {
-    transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 .main-table table {
@@ -195,25 +191,19 @@ input[type="button"]:active {
   padding: 5px 20px;
 }
 
-
-
-
-
-
 .dialog-add {
   position: fixed;
-  top: 0; 
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgb(0, 0, 0,0.8);
- 
+  background-color: rgb(0, 0, 0, 0.8);
 }
 
 div.form {
   height: 65%;
-    width: 70%;
-    margin: auto;
+  width: 70%;
+  margin: auto;
   background-color: #3ab395;
   transform: translateY(-50%);
   position: relative;
@@ -223,7 +213,6 @@ div.form {
   border-radius: 20px;
   animation: animatin;
   animation-duration: 0.5s;
-  
 }
 
 div.form form {
@@ -244,9 +233,6 @@ div.form form {
   border-radius: 10px;
 }
 
-
-
-
 .form-action-button {
   display: flex;
   flex-wrap: wrap;
@@ -266,17 +252,6 @@ div.form form {
   font-weight: bold;
   font-size: 200%;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 .input-box {
   display: flex;
